--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,15 +35,15 @@ firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.4.1"
 googleOss = "17.1.0"
 googleOssPlugin = "0.10.6"
-hilt = "2.52"
+hilt = "2.53"
 hiltExt = "1.2.0"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
-kotlin = "2.0.20"
+kotlin = "2.1.0-dev-5441"
 kotlinxCoroutines = "1.9.0"
 kotlinxDatetime = "0.6.1"
 kotlinxSerializationJson = "1.6.3"
-ksp = "2.0.20-1.0.25"
+ksp = "2.0.255"
 moduleGraph = "2.7.1"
 okhttp = "4.12.0"
 protobuf = "4.26.1"
